# deepslope

./: .gitignore  CITATION.cff  requirements.txt  run
ci/: Dockerfile  build.sh
deepslope/: bootstrap.py  config.py  state.py
deepslope/data/: dataset.py  elevation.py  filter.py  preprocess.py
deepslope/main/: __main__.py  config.py  export.py  models.py  new_config.py  new_dataset.py  state.py  train.py
deepslope/monitoring/: __init__.py  grad.py  monitor.py  vz_monitor.py
deepslope/nn/: decoder.py  diffusion.py  discriminator.py  encoder.py  generator.py  net.py  refinement.py  residual.py
deepslope/optim/: __main__.py  loop.py  loss.py  train.py  train_gan.py  train_refinement.py
deepslope/optim/tasks/: train_diffusion.py
deepslope/visualization/: make_sequence.py  view_filter.py  view_render.py  view_tiff.py
docs/: README.md  data.md
example/opencv/: CMakeLists.txt  CMakePresets.json  deepslope.cpp  deepslope.h  example.cpp
pg/: CMakeLists.txt  README.md  main.cpp  pyproject.toml
vz/: CMakeLists.txt  README.md  main.cpp  pyproject.toml
